--- a/Client/EVSE/Base.lproj/Main_iPad.storyboard
+++ b/Client/EVSE/Base.lproj/Main_iPad.storyboard
@@ -71,7 +71,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <sections>
-                            <tableViewSection headerTitle="Verbinden per WLAN" id="KWN-FB-cg4">
+                            <tableViewSection headerTitle="Verbinden per WLAN" footerTitle="Sie müssen sich im WLAN-Netzwerk &quot;evse&quot; einloggen, um diese Funktion nutzen zu können." id="KWN-FB-cg4">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="ZlW-Bm-Pei" style="IBUITableViewCellStyleDefault" id="gX6-4f-mhm">
                                         <rect key="frame" x="0.0" y="55" width="768" height="44"/>
@@ -95,7 +95,7 @@
                             <tableViewSection headerTitle="Verbinden per IP" id="v26-ww-vDz">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="ARD-gg-qgV">
-                                        <rect key="frame" x="0.0" y="147" width="768" height="44"/>
+                                        <rect key="frame" x="0.0" y="174" width="768" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ARD-gg-qgV" id="DDT-45-dGG">
                                             <rect key="frame" x="0.0" y="0.0" width="768" height="43"/>
@@ -126,7 +126,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="uFb-0T-fLC" style="IBUITableViewCellStyleDefault" id="cRU-Dh-lpn">
-                                        <rect key="frame" x="0.0" y="191" width="768" height="44"/>
+                                        <rect key="frame" x="0.0" y="218" width="768" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cRU-Dh-lpn" id="fXo-sn-S7d">
                                             <rect key="frame" x="0.0" y="0.0" width="768" height="43"/>
