--- a/Client/EVSE/Base.lproj/Main_iPad.storyboard
+++ b/Client/EVSE/Base.lproj/Main_iPad.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="S5B-kA-kGA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" useAutolayout="YES" initialViewController="43k-fb-1wu">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
@@ -48,14 +48,15 @@
             </objects>
             <point key="canvasLocation" x="69" y="-1063"/>
         </scene>
-        <!--Split View Controller-->
+        <!--Root View Controller-->
         <scene sceneID="22Y-j9-TPu">
             <objects>
-                <splitViewController id="43k-fb-1wu" sceneMemberID="viewController">
+                <splitViewController id="43k-fb-1wu" customClass="RootViewController" sceneMemberID="viewController">
                     <toolbarItems/>
                     <connections>
                         <segue destination="0vV-FG-uJN" kind="relationship" relationship="masterViewController" id="E09-vQ-v1K"/>
                         <segue destination="ppp-nT-lFK" kind="relationship" relationship="detailViewController" id="p8f-m0-V0i"/>
+                        <segue destination="S5B-kA-kGA" kind="replace" identifier="networkShow" splitViewControllerTargetIndex="1" id="nqd-8E-2rM"/>
                     </connections>
                 </splitViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cl7-uB-lxQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -155,12 +156,11 @@
                         <outlet property="ipSettings" destination="ARD-gg-qgV" id="GtD-Iz-smX"/>
                         <outlet property="ipText" destination="Tvg-D8-Eh0" id="ZMm-V7-OuR"/>
                         <outlet property="wlanConnect" destination="gX6-4f-mhm" id="69i-6z-aJr"/>
-                        <segue destination="43k-fb-1wu" kind="modal" identifier="showApp" id="6f8-PF-7g1"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pq7-cw-JKq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1997" y="-595"/>
+            <point key="canvasLocation" x="-915" y="-1867"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Q6Q-FN-VOp">
